project(rollinghashcpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall")

if(WIN32)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")	
else()
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -pedantic -ggdb -g3 -O2 -Woverloaded-virtual -Wsign-promo -Wold-style-cast")
endif()
add_executable(example "example.cpp")
add_executable(example2 "example2.cpp")
add_executable(example3 "example3.cpp")
add_executable(example4 "example2.cpp")
add_executable(example5 "example3.cpp")
add_executable(example6 "example2.cpp")
add_executable(example64bits "example64bits.cpp")
add_executable(speedtesting "speedtesting.cpp")
add_executable(unit.cpp "unit.cpp")
