cmake_minimum_required(VERSION 3.0...3.23)

project(rollinghashcpp)
set(CMAKE_CXX_STANDARD 11)

if(WIN32)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")	
endif()
include_directories(include)
add_executable(example "examples/example.cpp")
add_executable(example2 "examples/example2.cpp")
add_executable(example3 "examples/example3.cpp")
add_executable(example4 "examples/example2.cpp")
add_executable(example5 "examples/example3.cpp")
add_executable(example6 "examples/example2.cpp")
add_executable(example64bits "examples/example64bits.cpp")
add_executable(speedtesting "benchmarks/speedtesting.cpp")
add_executable(unit "tests/unit.cpp")
enable_testing()
add_test(unit unit)
